# models/Assignment.js
@@ -1,0 +1,28 @@
+const mongoose = require('mongoose');
+
+const assignmentSchema = new mongoose.Schema({
+  name: {
+    type: String,
+    required: true,
+    trim: true
+  },
+  deadline: {
+    type: Date,
+    required: true
+  },
+  description: {
+    type: String,
+    required: true,
+    trim: true
+  },
+  classroomID: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'Classroom',
+    required: true
+  }
+}, {
+  timestamps: true
+});
+
+const Assignment = mongoose.model('Assignment', assignmentSchema);
+module.exports = Assignment;
