# routes/classRoutes.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { createClass, updateClass, deleteClass, getClass } = require('../controllers/classController');
+const { createClass, updateClass, deleteClass, getClass, getClassroomClasses } = require('../controllers/classController');
 const authMiddleware = require('../middlewares/auth'); // For authentication middleware
 
 const router = express.Router();
@@ -8,5 +8,6 @@ router.post('/', authMiddleware, createClass);
 router.put('/:classId', authMiddleware, updateClass);
 router.delete('/:classId', authMiddleware, deleteClass);
 router.get('/:classId', getClass);
+router.get('/classroom/:classroomId', getClassroomClasses);
 
 module.exports = router;
